@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2006-01-11 Michal Čihař  <michal@cihar.com>
+    * main.php: Do not fail if no server is defined.
+
 2006-01-10 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/sqlparser.lib.php: bug #1394479, problem detecting ending 
       semi-colon, generates a SHOW KEYS FROM no table name
